Source/WebCore/platform/graphics/mac/FontCacheMac.mm
@@ -54,7 +54,6 @@ namespace WebCore {
 
 #if PLATFORM(MAC)
 
-#if !USE_PLATFORM_SYSTEM_FALLBACK_LIST
 static CGFloat toNSFontWeight(FontSelectionValue fontWeight)
 {
     if (fontWeight < FontSelectionValue(150))
@@ -75,12 +74,11 @@ static CGFloat toNSFontWeight(FontSelectionValue fontWeight)
         return NSFontWeightHeavy;
     return NSFontWeightBlack;
 }
-#endif
 
 RetainPtr<CTFontRef> platformFontWithFamilySpecialCase(const AtomicString& family, FontSelectionRequest request, float size)
 {
+    // FIXME: See comment in FontCascadeDescription::effectiveFamilyAt() in FontDescriptionCocoa.cpp
     if (equalLettersIgnoringASCIICase(family, "-webkit-system-font") || equalLettersIgnoringASCIICase(family, "-apple-system") || equalLettersIgnoringASCIICase(family, "-apple-system-font") || equalLettersIgnoringASCIICase(family, "system-ui")) {
-#if !USE_PLATFORM_SYSTEM_FALLBACK_LIST
         RetainPtr<CTFontRef> result = toCTFont([NSFont systemFontOfSize:size weight:toNSFontWeight(request.weight)]);
         if (isItalic(request.slope)) {
             CTFontSymbolicTraits desiredTraits = kCTFontItalicTrait;
@@ -90,10 +88,6 @@ RetainPtr<CTFontRef> platformFontWithFamilySpecialCase(const AtomicString& famil
                 result = italicizedFont;
         }
         return result;
-#else
-        UNUSED_PARAM(request);
-        ASSERT_NOT_REACHED();
-#endif
     }
 
     if (equalLettersIgnoringASCIICase(family, "-apple-system-monospaced-numbers")) {
